Tue Jan  1 08:47:25 2002  Douglas C. Schmidt  <schmidt@siesta.cs.wustl.edu>

	* ace/Thread.h: Clarify how the ACE_Thread_Adapter is deleted
	  when spawn() is called.  Thanks to Preston Elder
 	  <prez@srealm.net.au> for reporting this confusion.

Tue Jan  1 14:09:26 2002  Johnny Willemsen <jwillemsen@remedy.nl>

        * examples/Map_Manager/test_hash_map_manager.cpp:
          Made this example compiling when ACE_USES_WCHAR is set

        * Makefile.bor:
          Added examples directory because all examples for which there are
          BCB makefiles now build when ACE_USES_WCHAR is set

Tue Jan  1 00:02:12 2002  Nanbor Wang <nanbor@cs.wustl.edu>

        * ace/ace_dll.vcp: Added String_Base_Const.*.

Mon Dec 31 09:32:59 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/Hash_Map_Manager_T.h: Added ACE_UNIMPLEMENTED_FUNC() for the
	  assignment operator and copy constructor of class
 	  ACE_Hash_Map_Manager_Ex.  Thanks to Johnny Willemsen for
 	  reporting this.

Mon Dec 31 16:33:17 2001  Johnny Willemsen <jwillemsen@remedy.nl>

        * ace/OS.{h,i}:
          Added ACE_OS::freopen. This method reassigns an existing
          stream with a new stream. This is not supported on WinCE

Mon Dec 31 15:09:12 2001  Johnny Willemsen <jwillemsen@remedy.nl>

        * apps/drwho/BM_Server.cpp:
        * apps/drwho/Options.cpp:
        * apps/drwho/PM_Client.cpp:
        * apps/drwho/PMC_Ruser.cpp:
        * apps/drwho/PMC_Ruser.cpp:
        * apps/gperf/src/Options.cpp:
        * docs/tutorials/010/message_queue.cpp:
        * docs/tutorials/011/message_queue.cpp:
        * docs/tutorials/012/message_queue.cpp:
        * docs/tutorials/013/message_queue.cpp:
        * examples/IOStream/server/iostream_server.cpp:
        * examples/Reactor/WFMO_Reactor/test_multithreading.cpp:
        * netsvcs/clients/Logger/direct_logging.cpp:
        * tests/Pipe_Test.cpp:
        * examples/Service_Configurator/IPC-tests/server/Handle_Timeout.i: