@@ -1,3 +1,10 @@
+Tue Jan  1 20:05:12 2002  Johnny Willemsen <jwillemsen@remedy.nl>
+
+        * ace/Name_Request_Reply.{h,cpp}:
+          Changed type of 3 constructor arguments from size_t to ACE_UINT32
+          because the members in which these arguments are stored are also
+          of type ACE_UINT32
+
 Tue Jan  1 08:47:25 2002  Douglas C. Schmidt  <schmidt@siesta.cs.wustl.edu>
 
 	* ace/Thread.h: Clarify how the ACE_Thread_Adapter is deleted
