@@ -886,10 +886,10 @@ ACE_INLINE mode_t
 ACE_OS::umask (mode_t cmask)
 {
 #if defined (ACE_HAS_PACE)
-  ACE_OSCALL_RETURN (::pace_umask (cmask), int, -1);
+  ACE_OSCALL_RETURN (::pace_umask (cmask), mode_t, -1);
 # elif !defined (ACE_HAS_WINCE)
   ACE_OS_TRACE ("ACE_OS::umask");
-  ACE_OSCALL_RETURN (::_umask (cmask), int, -1);
+  ACE_OSCALL_RETURN (::_umask (cmask), mode_t, -1);
 # else
   ACE_NOTSUP_RETURN (-1);
 # endif /* ACE_HAS_PACE */
